Todo model class added

--- a/src/Tosk/Tosk.csproj
+++ b/src/Tosk/Tosk.csproj
@@ -69,4 +69,8 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Components\Pages\" />
+    </ItemGroup>
+
 </Project>
